--- a/sd-webui-forge/Dockerfile
+++ b/sd-webui-forge/Dockerfile
@@ -2,7 +2,7 @@
 
 ARG BASE_IMAGE="nvidia/cuda:12.1.0-devel-ubuntu20.04"
 ARG TORCH="torch==2.1.2 torchvision==0.16.2 --index-url https://download.pytorch.org/whl/cu121"
-ARG PYTHON_VERSION="3.10"
+
 
 FROM ${BASE_IMAGE}
 
@@ -18,12 +18,13 @@ WORKDIR /
 # Create workspace directory
 RUN mkdir /workspace
 
+ARG PYTHON_VERSION=3.10
 # Update, upgrade, install packages and clean up
 RUN apt-get update --yes && \
     apt-get upgrade --yes && \
     apt install --yes --no-install-recommends aria2 git git-lfs wget curl bash libgl1 software-properties-common openssh-server sudo unzip unrar zip && \
     add-apt-repository ppa:deadsnakes/ppa && \
-    apt-get install python3.10 python3.10-dev python3.10-venv -y --no-install-recommends && \
+    apt-get install "python${PYTHON_VERSION}" "python${PYTHON_VERSION}-dev" "python${PYTHON_VERSION}-venv" -y --no-install-recommends && \
     apt-get autoremove -y && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
@@ -56,7 +57,7 @@ RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
     apt-get install -y nodejs
 
 # malloc
-RUN curl -o https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4
+RUN curl https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -o libtcmalloc_minimal.so.4
 ENV LD_PRELOAD=libtcmalloc_minimal.so.4
 
 # Startup
