--- a/.github/workflows/build-sd-webui-forge-docker.yml
+++ b/.github/workflows/build-sd-webui-forge-docker.yml
@@ -23,6 +23,14 @@ jobs:
 
     - name: Set up Docker Build
       uses: docker/setup-buildx-action@v3
+
+    - name: free disk space
+      run: |
+        sudo swapoff -a
+        sudo rm -f /swapfile
+        sudo apt clean
+        docker rmi $(docker image ls -aq)
+        df -h
   
     - name: Build and Publish to Docker Hub
       uses: docker/build-push-action@v4
