--- a/sd-webui-forge/Dockerfile
+++ b/sd-webui-forge/Dockerfile
@@ -1,6 +1,6 @@
 # COPIED FROM RUNPOD https://github.com/runpod/containers/blob/main/official-templates/pytorch/Dockerfile
 
-ARG BASE_IMAGE="nvidia/cuda:12.1.0-devel-ubuntu20.04"
+ARG BASE_IMAGE="nvidia/cuda:12.1.0-runtime-ubuntu20.04"
 FROM ${BASE_IMAGE}
 
 ARG PYTHON_VERSION="3.10"
@@ -11,6 +11,9 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 # Set environment variables
 ENV DEBIAN_FRONTEND=noninteractive
 ENV SHELL=/bin/bash
+
+# Set the working directory
+WORKDIR /
 
 # Create workspace directory
 RUN mkdir /workspace
@@ -35,19 +38,18 @@ RUN ln -s /usr/bin/python${PYTHON_VERSION} /usr/bin/python && \
     curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && \
     python get-pip.py
 
-RUN pip install --upgrade --no-cache-dir pip
-RUN pip install --no-cache-dir ${TORCH}
+RUN pip install --upgrade --no-cache-dir pip && \
+    pip install --no-cache-dir ${TORCH}
 
 # JupyterLab
-RUN pip install --no-cache-dir jupyterlab==4.1.1 jupyter-archive jupyterlab-git \
-    jupyterlab-code-formatter jupyter-resource-usage jupyterlab-lsp nbdime \
-    ipywidgets ipykernel ipython black isort 'python-lsp-server[all]'
-RUN ln -s / .lsp_symlink
+RUN pip install --no-cache-dir jupyterlab==4.1.1 \
+    jupyter-archive jupyterlab-git jupyterlab-code-formatter \
+    ipywidgets ipykernel ipython black isort
 
 # Additional Python Packages
-RUN pip install --no-cache-dir pickleshare requests gdown pillow==9.5.0 xformers==0.0.23.post1 gradio==3.41.2 
-RUN pip cache purge
+RUN pip install --no-cache-dir pickleshare requests gdown pillow==9.5.0 xformers==0.0.23.post1 && \
+    pip cache purge
 
 # Startup
 EXPOSE 8888 6006
-CMD jupyter lab --allow-root --ip=0.0.0.0 --no-browser --ServerApp.trust_xheaders=True --ServerApp.disable_check_xsrf=False --ServerApp.allow_remote_access=True --ServerApp.allow_origin='*' --ServerApp.allow_credentials=True --ContentsManager.allow_hidden=True --Completer.use_jedi=False
+CMD jupyter lab --allow-root --ip=0.0.0.0 --no-browser --ServerApp.trust_xheaders=True --ServerApp.disable_check_xsrf=False --ServerApp.allow_remote_access=True --ServerApp.allow_origin='*' --ServerApp.allow_credentials=True --ContentsManager.allow_hidden=True
