--- a/sd-webui-forge/Dockerfile
+++ b/sd-webui-forge/Dockerfile
@@ -5,6 +5,7 @@ FROM ${BASE_IMAGE}
 
 ARG PYTHON_VERSION="3.10"
 ARG TORCH="torch==2.1.2 torchvision==0.16.2 --index-url https://download.pytorch.org/whl/cu121"
+ARG XFORMERS="0.0.23.post1"
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
@@ -21,9 +22,7 @@ RUN mkdir /workspace
 # Update, upgrade, install packages and clean up
 RUN apt-get update --yes && \
     apt-get upgrade --yes && \
-    apt install --yes --no-install-recommends curl && \
-    curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
-    apt install --yes --no-install-recommends nodejs aria2 git git-lfs wget bash libgl1 software-properties-common openssh-server sudo unzip unrar zip && \
+    apt install --yes --no-install-recommends aria2 git git-lfs curl wget gcc g++ bash libgl1 software-properties-common openssh-server && \
     add-apt-repository ppa:deadsnakes/ppa && \
     apt install --yes --no-install-recommends "python${PYTHON_VERSION}" "python${PYTHON_VERSION}-dev" "python${PYTHON_VERSION}-venv" && \
     apt-get autoremove -y && \
@@ -38,17 +37,16 @@ RUN ln -s /usr/bin/python${PYTHON_VERSION} /usr/bin/python && \
     curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && \
     python get-pip.py
 
+# Torch, JupyterLab and other python packages
 RUN pip install --upgrade --no-cache-dir pip && \
-    pip install --no-cache-dir ${TORCH}
-
-# JupyterLab
-RUN pip install --no-cache-dir jupyterlab==4.1.1 \
-    jupyter-archive jupyterlab-git jupyterlab-code-formatter \
-    ipywidgets ipykernel ipython black isort
-
-# Additional Python Packages
-RUN pip install --no-cache-dir pickleshare requests gdown pillow==9.5.0 xformers==0.0.23.post1 && \
+    pip install --no-cache-dir ${TORCH} && \
+    pip install --no-cache-dir jupyterlab==4.1.1 \
+    jupyter-archive jupyterlab-git ipywidgets ipykernel ipython \
+    pickleshare requests pillow==9.5.0 xformers==${XFORMERS} && \
     pip cache purge
+
+# Copy JupyterLab settings
+COPY jupyterlab/overrides.json /usr/local/share/jupyter/lab/settings/
 
 # Startup
 EXPOSE 8888 6006
