--- a/sd-webui-forge/Dockerfile
+++ b/sd-webui-forge/Dockerfile
@@ -16,7 +16,7 @@ ENV SHELL=/bin/bash
 WORKDIR /
 
 # Create workspace directory
-RUN mkdir /workspace
+RUN mkdir /notebooks
 
 # Update, install packages and clean up
 RUN apt-get update --yes && \
