--- a/.github/workflows/build-sd-webui-forge.yml
+++ b/.github/workflows/build-sd-webui-forge.yml
@@ -1,4 +1,4 @@
-name: Build SD Webui Forge
+name: Build SD Webui Forge Container
 
 on:
   workflow_dispatch:
@@ -19,7 +19,7 @@ jobs:
         docker-images: false
 
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       
     - name: Login to Docker Hub
       uses: docker/login-action@v3
@@ -34,5 +34,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         file: sd-webui-forge/Dockerfile
-        tags: ffxvs/sd-webui-forge:ub22.04-py3.10-tor2.1.2-cu12.1
+        tags: |
+          ${{secrets.DOCKER_USER}}/sd-webui-containers:forge-ub22.04-py3.10-tor2.1.2-cu12.1
+          ${{secrets.DOCKER_USER}}/sd-webui-containers:forge-latest
         push: true
