--- a/.github/workflows/build-sd-webui-forge.yml
+++ b/.github/workflows/build-sd-webui-forge.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       version:
         description: "Version"
-        default: "test"
+        default: "ub22.04-py3.10-pt2.1.2-cu12.1"
         required: true
 
 jobs:
@@ -37,5 +37,5 @@ jobs:
         file: sd-webui-forge/Dockerfile
         tags: |
           ${{secrets.DOCKER_USER}}/sd-webui-containers:forge-${{github.event.inputs.version}}
-          ${{secrets.DOCKER_USER}}/sd-webui-containers:forge-dev
+          ${{secrets.DOCKER_USER}}/sd-webui-containers:forge-latest
         push: true
