--- a/.github/workflows/build-sd-webui-forge.yml
+++ b/.github/workflows/build-sd-webui-forge.yml
@@ -3,6 +3,14 @@ name: Build SD Webui Forge Container
 on:
   workflow_dispatch:
     inputs:
+      build:
+        type: choice
+        description: "Release build"
+        default: "latest"
+        required: true
+        options:
+          - latest
+          - dev
       version:
         description: "Version"
         default: "ub22.04-py3.10-pt2.1.2-cu12.1"
@@ -21,7 +29,7 @@ jobs:
 
     - name: Checkout repository
       uses: actions/checkout@v4
-      
+
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -37,5 +45,5 @@ jobs:
         file: sd-webui-forge/Dockerfile
         tags: |
           ${{secrets.DOCKER_USER}}/sd-webui-containers:forge-${{github.event.inputs.version}}
-          ${{secrets.DOCKER_USER}}/sd-webui-containers:forge-latest
+          ${{secrets.DOCKER_USER}}/sd-webui-containers:forge-${{github.event.inputs.build}}
         push: true
