--- a/.github/workflows/build-sd-webui-forge.yml
+++ b/.github/workflows/build-sd-webui-forge.yml
@@ -6,14 +6,15 @@ on:
       build:
         type: choice
         description: "Release build"
-        default: "latest"
+        default: "dev"
         required: true
         options:
           - latest
           - dev
-      version:
-        description: "Version"
-        default: "ub22.04-py3.10-pt2.3.1-cu12.1"
+          - test
+      date:
+        description: "Date version"
+        default: "2024.09.16"
         required: true
 
 jobs:
@@ -38,12 +39,29 @@ jobs:
 
     - name: Set up Docker Build
       uses: docker/setup-buildx-action@v3
+
+    - name: Set Docker Tag
+      id: set_tag
+      run: |
+        build="${{github.event.inputs.build}}"
+        date="${{github.event.inputs.date}}"
+        base_tag="${{secrets.DOCKER_USER}}/sd-webui-containers:forge"
+        build_tag="$base_tag-$build"
+
+        if [ "$build" == "test" ]; then
+          echo "tags=$build_tag" >> $GITHUB_ENV
+        else
+          if [ "$build" == "dev" ]; then
+            date_tag="$build_tag-$date"
+          elif [ "$build" == "latest" ]; then
+            date_tag="$base_tag-$date"
+          fi
+          echo "tags=$build_tag,$date_tag" >> $GITHUB_ENV
+        fi
   
     - name: Build and Publish to Docker Hub
       uses: docker/build-push-action@v4
       with:
         file: sd-webui-forge/Dockerfile
-        tags: |
-          ${{secrets.DOCKER_USER}}/sd-webui-containers:forge-${{github.event.inputs.version}}
-          ${{secrets.DOCKER_USER}}/sd-webui-containers:forge-${{github.event.inputs.build}}
+        tags: ${{env.tags}}
         push: true
