--- a/.github/workflows/build-sd-webui-forge.yml
+++ b/.github/workflows/build-sd-webui-forge.yml
@@ -6,7 +6,7 @@ on:
       build:
         type: choice
         description: "Release build"
-        default: "dev"
+        default: "test"
         required: true
         options:
           - latest
@@ -14,7 +14,7 @@ on:
           - test
       date:
         description: "Date version"
-        default: "2024.09.16"
+        default: "2024.09.18"
         required: true
 
 jobs:
