--- a/sd-webui-forge/Dockerfile
+++ b/sd-webui-forge/Dockerfile
@@ -51,7 +51,7 @@ RUN pip install --no-cache-dir jupyterlab jupyter-archive nbformat \
     requests python-dotenv xformers==${XFORMERS} \
     https://huggingface.co/deauxpas/colabrepo/resolve/main/insightface-0.7.3-cp310-cp310-linux_x86_64.whl && \
     pip install --no-cache-dir -r https://raw.githubusercontent.com/lllyasviel/stable-diffusion-webui-forge/main/requirements_versions.txt && \
-    pip install --no-cache-dir -r requirements/adetailer.txt && \
+    pip install --no-cache-dir -r /requirements/adetailer.txt && \
     pip cache purge
 
 # JupyterLab settings
