--- a/sd-webui/Dockerfile
+++ b/sd-webui/Dockerfile
@@ -51,8 +51,8 @@ RUN pip install --no-cache-dir jupyterlab jupyter-archive nbformat \
     requests python-dotenv xformers==${XFORMERS} \
     https://huggingface.co/deauxpas/colabrepo/resolve/main/insightface-0.7.3-cp310-cp310-linux_x86_64.whl && \
     pip install --no-cache-dir -r https://raw.githubusercontent.com/AUTOMATIC1111/stable-diffusion-webui/v1.10.1/requirements_versions.txt && \
-    pip install --no-cache-dir -r requirements/adetailer.txt && \
-    pip install --no-cache-dir -r requirements/controlnet.txt && \
+    pip install --no-cache-dir -r /requirements/adetailer.txt && \
+    pip install --no-cache-dir -r /requirements/controlnet.txt && \
     pip cache purge
 
 # JupyterLab settings
