--- a/.github/workflows/build-sd-webui-forge.yml
+++ b/.github/workflows/build-sd-webui-forge.yml
@@ -6,7 +6,7 @@ on:
       build:
         type: choice
         description: "Release build"
-        default: "latest"
+        default: "dev"
         required: true
         options:
           - latest
@@ -21,47 +21,47 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     permissions: write-all
-    steps:          
-    - name: Free Disk Space
-      uses: jlumbroso/free-disk-space@main
-      with:
-        tool-cache: false
-        docker-images: false
+    steps:
+      - name: Free Disk Space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: false
+          docker-images: false
 
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{secrets.DOCKER_USER}}
-        password: ${{secrets.DOCKER_TOKEN}}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{secrets.DOCKER_USER}}
+          password: ${{secrets.DOCKER_TOKEN}}
 
-    - name: Set up Docker Build
-      uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Build
+        uses: docker/setup-buildx-action@v3
 
-    - name: Set Docker Tag
-      id: set_tag
-      run: |
-        build="${{github.event.inputs.build}}"
-        date="${{github.event.inputs.date}}"
-        base_tag="${{secrets.DOCKER_USER}}/sd-webui-containers:forge"
-        build_tag="$base_tag-$build"
-
-        if [ "$build" == "test" ]; then
-          echo "tags=$build_tag" >> $GITHUB_ENV
-        else
-          if [ "$build" == "dev" ]; then
-            date_tag="$build_tag-$date"
-          elif [ "$build" == "latest" ]; then
-            date_tag="$base_tag-$date"
+      - name: Set Docker Tag
+        id: set_tag
+        run: |
+          build="${{github.event.inputs.build}}"
+          date="${{github.event.inputs.date}}"
+          base_tag="${{secrets.DOCKER_USER}}/sd-webui-containers:forge"
+          build_tag="$base_tag-$build"
+          
+          if [ "$build" == "test" ]; then
+            echo "tags=$build_tag" >> $GITHUB_ENV
+          else
+            if [ "$build" == "dev" ]; then
+              date_tag="$build_tag-$date"
+            elif [ "$build" == "latest" ]; then
+              date_tag="$base_tag-$date"
+            fi
+            echo "tags=$build_tag,$date_tag" >> $GITHUB_ENV
           fi
-          echo "tags=$build_tag,$date_tag" >> $GITHUB_ENV
-        fi
-  
-    - name: Build and Publish to Docker Hub
-      uses: docker/build-push-action@v4
-      with:
-        file: sd-webui-forge/Dockerfile
-        tags: ${{env.tags}}
-        push: true
+
+      - name: Build and Publish to Docker Hub
+        uses: docker/build-push-action@v4
+        with:
+          file: sd-webui-forge/Dockerfile
+          tags: ${{env.tags}}
+          push: true
